Fix tradition section style on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,31 +207,33 @@ main {
 /* *=========== Traditions ========== */
 
 .traditions-section {
-  /* padding-top: 2rem;
+  padding-top: 2rem;
   padding-bottom: 1rem;
+}
+
+.traditions-section h2 {
   text-align: center;
-  width: 100%; */
-  /* max-width: 80vw; */
+  margin-bottom: 2rem;
 }
 
 .traditions-section-container {
-  padding-top: 2rem;
-  padding-bottom: 1rem;
-  text-align: center;
-  width: 100%;
-}
-
-.traditions-section-container > h2 {
-  margin-bottom: 1rem;
-  font-size: 2rem;
+  /* padding-top: 2rem; */
+  /* padding-bottom: 1rem; */
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .traditions-section-container img {
   display: none;
 }
 
-.traditions-article > p {
+.traditions-article p {
   margin-bottom: 2rem;
+}
+
+.traditions-article > h3,
+.delivery-article > h3 {
+  margin-bottom: 0.5rem;
 }
 
 /* *========== Team section ========== */
